--- a/index.html
+++ b/index.html
@@ -75,33 +75,27 @@
         <div class="book-grid">
             <div class="book-item">
                 <img src="images/book1.jpeg" alt="Book 1">
-                <h3>It Ends with Us</h3>
-                <p>Colleen Hoover</p>
+                <h3>It Ends with Us by Colleen Hoover</h3>
             </div>
             <div class="book-item">
                 <img src="images/book2.jpeg" alt="Book 2">
-                <h3>Harry Potter and the Order of the Phoenix</h3>
-                <p>J.K. Rowling</p>
+                <h3>Harry Potter and the Order of the Phoenix by J.K. Rowling</h3>
             </div>
             <div class="book-item">
                 <img src="images/book3.jpeg" alt="Book 3">
-                <h3>The Psychology of Money</h3>
-                <p>Morgan Housel</p>
+                <h3>The Psychology of Money by Morgan Housel</h3>
             </div>
             <div class="book-item">
                 <img src="images/book4.jpeg" alt="Book 4">
-                <h3>Rich Dad Poor Dad</h3>
-                <p>Robert T.Kiyosaki</p>
+                <h3>Rich Dad Poor Dad by Robert T.Kiyosaki</h3>
             </div>
             <div class="book-item">
                 <img src="images/book5.jpeg" alt="Book 5">
-                <h3>The Art of Selling your Business</h3>
-                <p>John Warrillow</p>
+                <h3>The Art of Selling your Business by John Warrillow</h3>
             </div>
             <div class="book-item">
                 <img src="images/book6.jpeg" alt="Book 6">
-                <h3>The Code Breaker</h3>
-                <p>Walter Isaacson</p>
+                <h3>The Code Breaker by Walter Isaacson</h3>
             </div>
         </div>
     </section>
